# MoonOS

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
kernel/: CMakeLists.txt  Makefile  myos.kernel
kernel/arch/: icxxabi.cpp
kernel/arch/i386/: boot.asm  crti.asm  crtn.asm  internal.asm  interrupt.asm  linker.ld  tty.c
kernel/filesystem/: absfilesystem.h  fat32.h  fatfilesystem.cpp  fatfilesystem.h  filedescriptor.h
kernel/include/grub/: multiboot.h
kernel/include/kernel/: gdt.h  idt.h  kernel.h  keyboard.h  memory.h  page.h  proc.h  tty.h  vga.h
kernel/include/kernel/interrupt/: interrupt.h
kernel/include/kernel/tasks/: task.h
kernel/kernel/: gdt.c  idt.c  kernel.c  main.c  memory.c  page.c
kernel/kernel/interrupt/: clockinterrupt.cpp  clockinterrupt.h  hdinterrupt.cpp  hdinterrupt.h  interrupt.cpp  keyboard.cpp
kernel/kernel/tasks/: InputTask.h  filesystemtask.cpp  filesystemtask.h  harddisktask.cpp  harddisktask.h  inputtask.cpp  ticktask.cpp  ticktask.h
kernel/liballoc/: liballoc.c  liballoc.h  moonos.c
libc/: CMakeLists.txt  Makefile
libc/assert/: assert.c
libc/include/: assert.h  stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c
libc/stdlib/: abort.c  getticket.c  sendrecv.c
libc/string/: memmove.c
pdclib/: CMakeLists.txt
pdclib/functions/: CMakeLists.txt
pdclib/functions/stdio/: _PDCLIB_flushbuffer.c  _PDCLIB_print.c  fopen.c  fwrite.c
pdclib/includes/: CMakeLists.txt
pdclib/internals/: CMakeLists.txt  _PDCLIB_aux.h  _PDCLIB_io.h
pdclib/opt/: CMakeLists.txt
pdclib/platform/: CMakeLists.txt
pdclib/platform/example/: CMakeLists.txt
pdclib/platform/example/functions/_PDCLIB/: _PDCLIB_allocpages.c  _PDCLIB_fileops.c  _PDCLIB_freepages.c  _PDCLIB_open.c  _PDCLIB_stdinit.c
pdclib/platform/example/functions/message/: getticket.c  sendrecv.asm  sendrecv.c
pdclib/platform/example/includes/: message.h
pdclib/platform/example/internals/: _PDCLIB_config.h
